Fixed broken image links due to z-index of section.entry, changed navbar to white (navbar-default Bootstrap).

--- a/css/style_01.css
+++ b/css/style_01.css
@@ -70,7 +70,7 @@ section.entry
 {
 	position: relative;
 	background-color: white;
-	z-index: -5;
+	z-index: 8;
 }
 section.entry div.container-fluid div.image div
 {
