--- a/css/style_02.css
+++ b/css/style_02.css
@@ -77,7 +77,7 @@ section.entry
 {
 	position: relative;
 	background-image: url(../assets/tweed/tweed.png);
-	z-index: -5;
+	z-index: 8;
 }
 section.entry div.container-fluid div.image div
 {
